# NeuralNetwork

./: CMakeLists.txt  README.md
doc/: NeuralNetwork.odg  NeuralNetwork_BackProp1.odg  NeuralNetwork_BackProp2.odg  NeuralNetwork_Example.odg  NeurlNetwork.odg  Neuron.odg
src/: NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  main.cpp  util.cpp  util.h
